<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Data-->
    <data>

        <import type="android.view.View" />


    </data>
    <!--Parent Main View-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/heading_donation_form"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/heading_donation_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_donation_form"
                android:textColor="#0F187F"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:hint="@string/hint_donation_email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccpDialog_showNameCode="true"
                    app:ccpDialog_textColor="#000000"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_defaultNameCode="US"
                    app:ccp_flagBorderColor="@color/colorTransparent"
                    app:ccp_showArrow="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textGravity="CENTER" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="7.5"
                    android:background="@color/white"
                    android:hint="@string/hint_donation_phone_number"
                    android:inputType="phone"
                    android:padding="8dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:text="@string/title_donation_currency"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:focusable="false"
                android:hint="@string/hint_donation_choose_your_option"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:hint="@string/hint_donation_amount"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start|center_vertical"
                android:padding="10dp"
                android:text="@string/title_donation_donate_for"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_donate_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:hint="@string/hint_donation_choose_your_option"
                android:focusable="false"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />
            <EditText
                android:visibility="gone"
                android:id="@+id/et_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_donation_form_inputs"
                android:hint="Please Specify"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btn_label_continue"
                android:textAllCaps="false"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</layout>

